--- a/css/about.css
+++ b/css/about.css
@@ -314,6 +314,7 @@ footer{
         font-size: 8vw;
         text-align: right;
         color: white;
+        margin-right: 20px;
     }
 
     .nav-links li{
@@ -373,6 +374,7 @@ footer{
 
     .all-right{
         text-align: left;
+        margin-left: 20px;
     }
 
     .services{
